# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-ci.yml
page_loader/: __init__.py  argparse.py  args.py  comparator.py  file.py  page.py  resourse.py  restools.py
page_loader/scripts/: page_loader.py
tests/: file.py  fixture.py  page_loader_test.py  replace_img_test.py  test_page_loader.py
tests/fixtures/: expected-index.html  expected.html  replace_img_test.html  replace_img_test_replaced.html  resources.json  resources_list.json
tests/fixtures/res/: absolute.css  absolute.js  relative.css  relative.js
